# evobee

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTALL  README.md  cmake_install.cmake  doxygen.cfg  evobee-test-simple.cfg.json  evobee.cfg  evobee.cfg.json  evobee_class_diagram.md
data/: alan-vis-data-edit.json
design/: visual-forgaging-flowcharts.odg
doc/html/: AbstractHive_8cpp.html  AbstractHive_8cpp__incl.dot  AbstractHive_8cpp__incl.map  AbstractHive_8cpp__incl.md5  AbstractHive_8cpp_source.html  AbstractHive_8h.html  AbstractHive_8h__dep__incl.map  AbstractHive_8h__dep__incl.md5  AbstractHive_8h__incl.map  AbstractHive_8h__incl.md5  AbstractHive_8h_source.html  Colour_8cpp.html  Colour_8cpp__incl.map  Colour_8cpp__incl.md5  Colour_8cpp_source.html  Colour_8h.html  Colour_8h__dep__incl.map  Colour_8h__dep__incl.md5  Colour_8h__incl.map  Colour_8h__incl.md5  Colour_8h_source.html  Environment_8cpp.html  Environment_8cpp__incl.dot  Environment_8cpp__incl.map  Environment_8cpp__incl.md5  Environment_8cpp_source.html  Environment_8h.html  Environment_8h.js  Environment_8h__dep__incl.map  Environment_8h__dep__incl.md5  Environment_8h__incl.map  Environment_8h__incl.md5  Environment_8h_source.html  EventManager_8cpp.html  EventManager_8cpp__incl.map  EventManager_8cpp__incl.md5  EventManager_8cpp_source.html  EventManager_8h.html  EventManager_8h__dep__incl.map  EventManager_8h__dep__incl.md5  (+355 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  (+19 more)
doc/markdown/: evobee-architecture.md  evobee-config.md  evobee-install.md  evobee-odd.md
docs/: NOTES.txt  evobee-architecture.md  evobee-config.md  evobee-install.md  evobee-log-files.md  evobee-odd.md  index.html  index.md
docs/html/: AbstractHive_8cpp.html  AbstractHive_8cpp__incl.dot  AbstractHive_8cpp__incl.map  AbstractHive_8cpp__incl.md5  AbstractHive_8cpp_source.html  AbstractHive_8h.html  AbstractHive_8h__dep__incl.dot  AbstractHive_8h__dep__incl.map  AbstractHive_8h__dep__incl.md5  AbstractHive_8h__incl.dot  AbstractHive_8h__incl.map  AbstractHive_8h__incl.md5  AbstractHive_8h_source.html  Colour_8cpp.html  Colour_8cpp__incl.dot  Colour_8cpp__incl.map  Colour_8cpp__incl.md5  Colour_8cpp_source.html  Colour_8h.html  Colour_8h__dep__incl.dot  Colour_8h__dep__incl.map  Colour_8h__dep__incl.md5  Colour_8h__incl.dot  Colour_8h__incl.map  Colour_8h__incl.md5  Colour_8h_source.html  Environment_8cpp.html  Environment_8cpp__incl.dot  Environment_8cpp__incl.map  Environment_8cpp__incl.md5  Environment_8cpp_source.html  Environment_8h.html  Environment_8h__dep__incl.dot  Environment_8h__dep__incl.map  Environment_8h__dep__incl.md5  Environment_8h__incl.dot  Environment_8h__incl.map  Environment_8h__incl.md5  Environment_8h_source.html  EventManager_8cpp.html  (+540 more)
docs/html/search/: all_0.js  all_1.js  (+80 more)
docs/markdown/: evobee-config.md
include/: AbstractHive.h  Colour.h  Environment.h  EventManager.h  EvoBeeExperiment.h  EvoBeeModel.h  Flower.h  FloweringPlant.h  Hive.h  HiveConfig.h  HoneyBee.h  Hymenoptera.h  Logger.h  ModelComponent.h  ModelParams.h  Patch.h  PlantTypeConfig.h  PlantTypeDistributionConfig.h  Pollen.h  Pollinator.h  PollinatorConfig.h  PollinatorConstancyType.h  PollinatorEnums.h  PollinatorStructs.h  Position.h  ReflectanceInfo.h  Visualiser.h  evobeeConfig.h.in  giurfa.h  hoverflyPrefs.h  res_path.h  sdl_tools.h  tools.h
src/: AbstractHive.cpp  Colour.cpp  Environment.cpp  EventManager.cpp  EvoBeeExperiment.cpp  EvoBeeModel.cpp  Flower.cpp  FloweringPlant.cpp  Hive.cpp  HoneyBee.cpp  Hymenoptera.cpp  Logger.cpp  ModelComponent.cpp  ModelParams.cpp  Patch.cpp  PlantTypeConfig.cpp  Pollinator.cpp  ReflectanceInfo.cpp  Visualiser.cpp  evobee.cpp  evobeeConfig.h.in  tools.cpp
utils/: evobee-config-gen.py  evobee-randomised-refuges  explore-temp-responses.py  extract-mp-counts  extract-mp-counts-by-gen  extract-mp-counts-by-mp  gen-plant-type-summaries  gen-shuffled-refuges.awk  gen-slurm-file.py  git-commit-doc  levy-plot.gnuplot  newclass.py  patch-visualisation-hsv.gnuplot  patch-visualisation.gnuplot  plant-types-over-time.gnuplot  plot-fixation-histogram.py  plot-fixtation-times-violin.py  plot-mp-distrib-violin.py  plot-mp-matrix.gnuplot  plot-mps.gnuplot  plot-pollen-distribs.gnuplot  plot-results-envsize.py  plot-results-patchconst.py  plot-results.py  plot-two-species-over-time.py  process-pollen-distrib.awk  process-pollination.awk  process-pollinator-flower-visits.awk  processDataFiles  processDataFilesX  processDataFilesY  processExtinctionTimes  processFixationTimes  processLocalities
utils/colourGradientTool/: colourGradientTool.pde
utils/hexmap/: SPD.mat  calc-dom-lambda  calc-dom-lambda.cpp  calc-hex-pos  calc-summary-stats  calc-summary-stats-across-samples  colour_space_refs.mat  commands.txt  dom-lambda-by-theta-commands.txt  flat-pref-by-theta.csv  fred-commands.txt  fred-dom-wavelength-data-sample-1-config.json  fred-ids.txt  gen-ausid-count-summaries-indiv  gen-hex-plot-data  gen-mp-count-summaries-indiv  gen-mp-counts  gen-plainplot-mps-summary-pngs  gen-plainplot-mps-summary-pngs-across-samples  gen-stimuli  gen-stimuli.cpp  giurfa-pref-by-theta.csv  hex-info-commands.txt  hoverfly-pref-by-theta.csv  myhexmap_ALG.json  pick-fred-samples  pick-fred-samples-debug  plant-types.json  plot-hex-sector.gnuplot  plot-hex-space.gnuplot  plot-hexmap.gnuplot  simple_hex_2019.m  stavenga.m
utils/plainplots-lambda/: gen-plainplot-combined-pngs  gen-plainplot-indiv-pngs  plainplot-display-template.tex
utils/swarmplots/: gen-count-summaries-indiv  gen-swarmplot-combined-pdfs  gen-swarmplot-indiv-pdfs  plot-mp-swarmplot.py  swarmplot-display-template.tex
(+660 files in other folders)
